// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createDisableRuleFileCodeAction should create a code action to disable a rule for an entire file 1`] = `
{
  "edit": {
    "changeAnnotations": undefined,
    "documentChanges": [
      {
        "edits": [
          {
            "newText": "/* stylelint-disable rule */
",
            "range": {
              "end": {
                "character": 0,
                "line": 0,
              },
              "start": {
                "character": 0,
                "line": 0,
              },
            },
          },
        ],
        "textDocument": {
          "uri": "file:///home/user/src/file.css",
          "version": 1,
        },
      },
    ],
  },
  "kind": "quickfix",
  "title": "Disable rule for the entire file",
}
`;

exports[`createDisableRuleFileCodeAction should place the code action on the second line if the file has a shebang 1`] = `
{
  "edit": {
    "changeAnnotations": undefined,
    "documentChanges": [
      {
        "edits": [
          {
            "newText": "/* stylelint-disable rule */
",
            "range": {
              "end": {
                "character": 0,
                "line": 1,
              },
              "start": {
                "character": 0,
                "line": 1,
              },
            },
          },
        ],
        "textDocument": {
          "uri": "file:///home/user/src/file.js",
          "version": 1,
        },
      },
    ],
  },
  "kind": "quickfix",
  "title": "Disable rule for the entire file",
}
`;
